Use cargo workspaces for monorepo-ish code structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,2 @@
-[package]
-name = "acclimatize"
-version = "0.1.0"
-edition = "2021"
-default-run = "acclimatize"
-
-[[bin]]
-name = "acclimatize"
-path = "src/main.rs"
-
-[[bin]]
-name = "guessing_game"
-path = "src/guessing_game/main.rs"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[dependencies]
+[workspace]
+members = ["acclimatize", "guessing_game"]
